css/style.css
/* Box Model Hack */
* {
  box-sizing: border-box;
}

@font-face {
  font-family: "otf_gluspbold";
  src: url("/css/fonts/webfontkit-20220706-123828/otf_glusp-webfont.woff2")
      format("woff2"),
    url("otf_glusp-webfont.woff") format("woff");
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: "Bebas Neue";
  src: url("/css/fonts/BebasNeue/BebasNeue-Bold.woff2") format("woff2"),
    url("/css/fonts/BebasNeue/BebasNeue-Regular.woff") format("woff");
  font-weight: normal;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: "Bebas Neue";
  src: url("/css/fonts/BebasNeue/BebasNeue-Bold.woff2") format("woff2"),
    url("/css/fonts/BebasNeue/BebasNeue-Bold.woff") format("woff");
  font-weight: bold;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: "Bebas Neue";
  src: url("/css/fonts/BebasNeue/BebasNeue-Light.woff2") format("woff2"),
    url("/css/fonts/BebasNeue/BebasNeue-Light.woff") format("woff");
  font-weight: 300;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: "Bebas Neue";
  src: url("/css/fonts/BebasNeue/BebasNeue-Thin.woff2") format("woff2"),
    url("/css/fonts/BebasNeue/BebasNeue-Thin.woff") format("woff");
  font-weight: 100;
  font-style: normal;
  font-display: swap;
}

/* stylesheet.css */
/* Clear fix hack */
.clearfix:after {
  content: ".";
  display: block;
  clear: both;
  visibility: hidden;
  line-height: 0;
  height: 0;
}

.clear {
  clear: both;
}

html {
  font-size: 12.4px;
}

html {
  font-family: "Bebas Neue", Plain, Helvetica Neue, Arial, Noto Sans, sans-serif;
  line-height: 1.15;
  -webkit-text-size-adjust: 100%;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}

strong {
  font-family: "otf_gluspbold", OTF® Glusp, Times New Roman, Times, serif;
}

h2 {
  font-family: "otf_gluspbold", OTF® Glusp, Times New Roman, Times, serif;
  font-size: 2rem;
}

.animate__animated .animate__fadeInDown {
  --animate-duration: 2.6s;
}

.greeting {
  font-family: "otf_gluspbold", OTF® Glusp, Times New Roman, Times, serif;
  transition: all 0.5s ease-in-out;
}

/******************************************
/* BASE STYLES
/*******************************************/

.spline {
  display: block;
  z-index: -2;
  /* background-color: red; */
  width: 100%;
  overflow-x: hidden;
}
.scrolly {
  scroll-behavior: smooth;
}

.container {
  scroll-snap-type: y mandatory;
}

#top,
#work,
#portfolio,
#contact {
  scroll-snap-align: start;
}

body {
  margin: 0;
  font-family: "Bebas Neue";
  font-size: 1rem;
  font-weight: normal;
  font-style: normal;
  letter-spacing: 2px;
  line-height: 1.5;
  color: #fff;
  text-align: left;
  background-color: #151515;
  /* overflow: hidden; */
}

section {
  scroll-snap-align: center;
}

#page-wrapper {
  /* overflow-y: scroll;
  scroll-behavior: smooth; */
}

[tabindex="-1"]:focus:not(:focus-visible) {
  outline: 0 !important;
}

h3 {
  margin-top: 0;
  margin-bottom: 0.71em;
}

a {
  color: #fff;
  background-color: transparent;
}

a,
a:hover {
  text-decoration: none;
}

a:hover {
  color: #ffa63d;
}

svg {
  vertical-align: middle;
}

svg {
  overflow: hidden;
}

a {
  transition: color 0.35s;
  display: inline-flex;
}

@media (prefers-reduced-motion: reduce) {
  a {
    transition: none;
  }
}

h3 {
  font-weight: 400;
}

h3 {
  font-size: 22px;
  line-height: 1;
}

h3 {
  font-size: 22px;
  line-height: 1;
}

@media screen and (min-width: 320px) {
  h3 {
    font-size: calc(22px + 18 * (100vw - 320px) / 1600);
  }
}

@media screen and (min-width: 1920px) {
  h3 {
    font-size: 40px;
  }
}

ul {
  list-style: none;
}

/*temp*/

.container-blob {
  max-width: 50vh;
}

.blob {
  position: absolute;
  top: 0;
  left: 0;
  fill: #023f92;
  width: 30vmax;
  z-index: -10;
  animation: move 10s ease-in-out infinite;
  transform-origin: 50% 50%;
  overflow: hidden;
}

@keyframes move {
  0% {
    transform: scale(1) translate(10px, -30px);
  }
  38% {
    transform: scale(0.8, 1) translate(80vw, 30vh) rotate(160deg);
  }
  40% {
    transform: scale(0.8, 1) translate(80vw, 30vh) rotate(160deg);
  }
  78% {
    transform: scale(1.3) translate(0vw, 50vh) rotate(-20deg);
  }
  80% {
    transform: scale(1.3) translate(0vw, 50vh) rotate(-20deg);
  }
  100% {
    transform: scale(1) translate(10px, -30px);
  }
}

/******************************************
/* LAYOUT  /* Nav */
/*******************************************/

#nav {
  background-color: #ffffff;
  text-align: center;
  position: fixed;
  left: 0;
  top: 0;
  width: 100%;
  z-index: 10000;
  cursor: default;
  height: 3.5em;
  line-height: 3.5em;
}

#nav ul {
  margin-bottom: 0;
  list-style: none;
  padding-left: 0;
}

#nav li {
  display: inline-block;
  padding-left: 0;
}

#nav a {
  -moz-transition: background-color 0.2s ease-in-out;
  -webkit-transition: background-color 0.2s ease-in-out;
  -ms-transition: background-color 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out;
  position: relative;
  display: block;
  color: #242121;
  text-decoration: none;
  outline: 0;
  font-weight: 600;
  border-radius: 8px;
  color: rgb(34, 33, 33);
  height: 2.5em;
  line-height: 2.5em;
  padding: 0 1.25em;
}

#nav a:hover {
  color: #fff !important;
  background: #383838;
}

#nav a.active {
  background: #484848;
}

#nav a.active:before {
  content: "";
  display: block;
  position: absolute;
  bottom: -0.6em;
  left: 50%;
  margin-left: -0.75em;
  border-left: solid 0.75em transparent;
  border-right: solid 0.75em transparent;
  border-top: solid 0.6em #282828;
}
/* ... */

